Adding webscrape manager

--- a/Settings/AppSettings.json
+++ b/Settings/AppSettings.json
@@ -1,6 +1,6 @@
 {
     "PathToChromeDriver": "/Users/ben/chromedriver/chromedriver",
-    "SecondsBetweenScrapes": 60,
+    "HoursBetweenScrapes": 6,
     "SearchEngineSettings": [
         {
             "Name": "GoogleFlights",
