--- a/Settings/AppSettings.json
+++ b/Settings/AppSettings.json
@@ -1,6 +1,34 @@
 {
     "PathToChromeDriver": "/Users/ben/chromedriver/chromedriver",
     "HoursBetweenScrapes": 6,
+    "OutputFilePath": "ScrapeResults.json",
+    "ScrapeTimes": [
+        "00:00",
+        "01:00",
+        "02:00",
+        "03:00",
+        "04:00",
+        "05:00",
+        "06:00",
+        "07:00",
+        "08:00",
+        "9:00",
+        "10:00",
+        "11:00",
+        "12:00",
+        "13:00",
+        "14:00",
+        "15:00",
+        "16:00",
+        "17:00",
+        "18:00",
+        "19:00",
+        "20:00",
+        "21:00",
+        "22:00",
+        "23:00",
+        "24:00"
+    ],
     "SearchEngineSettings": [
         {
             "Name": "GoogleFlights",
